rnsc/tests/snapshots/error-parser-outside_class_directive-eof.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; only a comment, no class at all
----- STDERR -----
[PARSER-001] Error: file contains no class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/eof.rns:1:35 ]
   │
 1 │ ; only a comment, no class at all
   │                                   │ 
   │                                   ╰─ the file is empty or contains only comments
   │ 
   │ Note: A Java assembly file must start with a '.class' directive.
───╯
----- HASH -----
not generated
