rnsc/tests/snapshots/error-parser-outside_class_directive-public_keyword.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
   public
.class public HelloWorld
----- STDERR -----
[E-008] Error: unexpected access flag before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/public_keyword.rns:1:4 ]
   │
 1 │    public
   │    ───┬──  
   │       ╰──── valid contexts for public access flag are: 'class declaration', 'method declaration'.
   │ 
   │ Help: Make sure the file starts with a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-008
───╯
----- HASH -----
not generated
